--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,16 @@
+import org.springframework.cloud.contract.verifier.config.TestFramework
+
+buildscript {
+    repositories {
+        mavenCentral()
+        mavenLocal()
+    }
+
+    dependencies {
+        classpath 'gradle.plugin.org.springframework.cloud:spring-cloud-contract-gradle-plugin:3.0.3'
+    }
+}
+
 plugins {
     id 'org.springframework.boot' version '2.5.3'
     id 'io.spring.dependency-management' version '1.0.11.RELEASE'
@@ -13,8 +26,12 @@ configurations {
     }
 }
 
+apply plugin: 'spring-cloud-contract'
+apply plugin: 'maven-publish'
+
 repositories {
     mavenCentral()
+    mavenLocal()
 }
 
 ext {
@@ -22,6 +39,7 @@ ext {
 }
 
 dependencies {
+    implementation 'org.kodilla:commons:1.0.3'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.cloud:spring-cloud-starter'
@@ -29,11 +47,17 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
     implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
     implementation 'org.springframework.cloud:spring-cloud-starter-sleuth'
+    implementation 'org.springframework.cloud:spring-cloud-starter-contract-verifier'
+    implementation 'org.springframework.kafka:spring-kafka'
     implementation 'org.flywaydb:flyway-core'
+    implementation 'junit:junit:4.13.1'
     compileOnly 'org.projectlombok:lombok'
     runtimeOnly 'org.postgresql:postgresql'
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    testImplementation 'org.springframework.cloud:spring-cloud-starter-contract-stub-runner'
+    testImplementation 'org.springframework.cloud:spring-cloud-starter-contract-verifier'
+    testImplementation 'com.h2database:h2:1.4.200'
 }
 
 dependencyManagement {
@@ -42,6 +66,19 @@ dependencyManagement {
     }
 }
 
+contracts {
+    testFramework = TestFramework.JUNIT5
+    packageWithBaseClasses = 'com.accounts'
+}
+
 test {
     useJUnitPlatform()
+}
+
+task stubsJar(type: Jar) {
+    classifier = "stubs"
+    into("META-INF/${project.group}/${project.name}/${project.version}/mappings") {
+        include('**/*.*')
+        from("${project.buildDir}/generated-snippets/stubs")
+    }
 }
